config loader , docker and other major updates
